# amazon

./: .env.example  .gitignore  Avanzamento tool Niuexa.xlsx  CLAUDE.md  DELIVERY_CHECKLIST.md  DEVELOPMENT_PLAN.md  TECHNICAL_ARCHITECTURE.md  TODO-inthezon-8020.md  docker-compose.yml  inthezon.dump  inthezon_docker.dump  inthezon_user_stories.md  render.yaml
.claude/agents/: playwright-qa-validator.md
backend/: celerybeat-schedule  requirements.txt
backend/app/: __init__.py  config.py  main.py  observability.py
backend/scripts/: cleanup_placeholder_recommendations.py  enable_time_series_partitioning.sql  rename_amazon_account.py
backend/tests/: test_accounts_summary.py  test_advertising_report_configs.py  test_alerts_api.py  test_analytics_comparison.py  test_analytics_service_ads_vs_organic.py  test_brand_analysis_lifecycle.py  test_brand_analysis_service.py  test_brand_analysis_sources.py  test_brand_analytics_integration.py  test_brand_analytics_week.py  test_brand_intelligence.py  test_catalog_products_period.py  test_catalog_service.py  test_daily_total_invariants.py  test_data_reconciliation.py  (+26 more)
docs/: conectar-conta-amazon.md  data-ingestion-analysis.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  qa-filter-tests.spec.ts  tailwind.config.js  tsconfig.node.tsbuildinfo
mcp-server/: README.md  RUNNING.md  cli.py  config.py  db.py  helpers.py  package-lock.json  package.json  pyproject.toml  server.py
mcp-server/scripts/: README.md  harness_phase1.mjs  harness_phase2.mjs  harness_phase3.mjs  seed_test_data.sql
(+302 files in other folders)
